<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_uuid"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/proximity_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="text_proximity uuid" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_major"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="major" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_minor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_minor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="minor" />

    </LinearLayout>

</LinearLayout>