<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="1dp">

        <TextView
            android:id="@+id/beacon_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/colorMystic"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorMystic"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_uuid"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/proximity_uuid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEggshell"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp"
            tools:text="text_proximity uuid" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorMystic"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_major"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_major"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEggshell"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp"
            tools:text="major" />

    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorMystic"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_minor"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_minor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEggshell"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/colorDimGray"
            android:textSize="20sp"
            tools:text="minor" />

    </TableRow>

</TableLayout>
